fix background overflow bug

--- a/app/assets/stylesheets/blocks/b-spoiler_block.sass
+++ b/app/assets/stylesheets/blocks/b-spoiler_block.sass
@@ -39,6 +39,7 @@
 
     &:after
       +shikimori('\e847')
+      background: transparent // fix background overflow bug rotation during animation
       font-size: 17px
       font-weight: bold
       margin-left: 8px
